FIx spacing in footer

--- a/site/assets/styles/base.css
+++ b/site/assets/styles/base.css
@@ -24,26 +24,18 @@ a {
 footer {
     margin-top: 3.5em;
     padding-top: 0.5em;
-
     border-top: 1px solid light-dark(var(--oc-gray-6), var(--oc-gray-5));
-
     display: flex;
     flex-direction: row;
-
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: .5em 1.25em;
+    
     a {
         color: light-dark(var(--oc-gray-6), var(--oc-gray-5));
-        padding: 0 0.7em;
 
         strong {
             text-decoration: none;
-        }
-
-        &:first-child {
-            padding-left: 0;
-        }
-
-        &:last-child {
-            padding-right: 0;
         }
     }
 }
